   so the distance and thus the color of each point is random).

 - new COLOR_TYPE-Mutation for MutaGen to randomly apply the new color-types (NONE, DIFFUSION, TARGET, TARGETG, DISTANCE)

 - significant performance-improvement in the refreshing-behaviour in the UI, you especially notive this when changing variations in the "Nonlinear"-tab

 - new "juliascope3Db"-variation, provided by Brad Stefanov
 - new "waves22"-variation, provided by Brad Stefanov
 - new "waves23"-variation, provided by Brad Stefanov
 - new "waves3"-variation, provided by Brad Stefanov
 - new "waves42"-variation, provided by Brad Stefanov
 - new "waves4"-variation, provided by Brad Stefanov
 - new "waves22"-variation, provided by Brad Stefanov
 - new "hex_modulus"-variation, provided by Brad Stefanov
 - new "truchet_hex_crop"-variation, provided by Brad Stefanov
 - new "truchet_hex_fill"-variation, provided by Brad Stefanov
 - new "dc_triantess-variation", provided by Jesus Sosa
 - new "dc_poincaredisc", provided by Jesus Sosa
 - new "dc_worley", provided by Jesus Sosa
 - new "dc_glypho", provided by Jesus Sosa
 - new "dc_fingerprint", provided by Jesus Sosa
 - new "dc_pentatiles", provided by Jesus Sosa
 - new "dc_quadtree", provided by Jesus Sosa
 - new "dc_sunflower", provided by Jesus Sosa
 - new "dc_gabornoise", provided by Jesus Sosa
 - new "dc_cairotiles", provided by Jesus Sosa
 - new "dc_moebiuslog", provided by Jesus Sosa
 - new "dc_inversion", provided by Jesus Sosa

 - Rick has updated the text in the About-section

V4.10 (11.05.2019)
 - New variation: dc_code by Jesus Sosa
 - Enhancements to dc_ variations by Jesus Sosa
 - Tips for Apophysis users (in Fractal flames: Help window) updated
 - Preference tinaCustomVariationsPath is now used for custom_wf and custom_wf_full

 - New Color Type feature
   There are now two coloring types, selectable per transform on the Color tab: